@@ -508,9 +508,9 @@ document.addEventListener('DOMContentLoaded', function() {
     function(data, xhr) {
       var count = data.stargazers_count;
       if (count > 10000)
-        count = (count / 1000).toFixed(0) + "k";
+        count = (count / 1000).toFixed(0) + 'k';
       else if (count > 1000)
-        count = (count / 1000).toFixed(1) + "k";
+        count = (count / 1000).toFixed(1) + 'k';
 
       /* Set number of stars */
       var stars = document.querySelector('.repo-stars .count');
